➕ depends on ngsof/tools v4

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "psr/simple-cache": "^1|^2|^3"
     },
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+        "ngsoft/tools": "^4"
     },
     "autoload": {
         "psr-4": {
